<resources>
    <string name="app_name">S Note</string>
    <string name="app_minor_version">13787</string>
    <string name="string_progress_app_name_version">S Note</string>
    <string name="string_filemanager_file_size_byte">Byte</string>
    <string name="fm_property_type_ppt">Microsoft Office PowerPoint 97-2003</string>
    <string name="fm_property_type_docx">Microsoft Office Word 2007</string>
    <string name="fm_property_type_xlsx">Microsoft Office Excel 2007</string>
    <string name="fm_property_type_pptx">Microsoft Office PowerPoint 2007</string>
    <string name="string_progress_loading">Loading...</string>
    <string name="string_progress_loading_folder">Loading...</string>
    <string name="string_wordeditor_mainmenu_viewmode">Read mode</string>
    <string name="string_wordeditor_mainmenu_save">Close</string>
    <string name="string_wordeditor_mainmenu_saveas">Save as</string>
    <string name="string_wordeditor_mainmenu_zoom">Zoom in/out</string>
    <string name="string_wordeditor_mainmenu_reflowtext">Reflow text</string>
    <string name="string_wordeditor_mainmenu_find">Find</string>
    <string name="string_wordeditor_mainmenu_replace">Overwrite</string>
    <string name="string_wordeditor_mainmenu_insert">Insert</string>
    <string name="string_wordeditor_mainmenu_format">Format</string>
    <string name="string_wordeditor_mainmenu_table">Table %s</string>
    <string name="string_localfilelist_mainmenu_newfolder">Create folder</string>
    <string name="string_common_filesave_resultmsg_saved">Saved</string>
    <string name="string_clipboard_filesave_resultmsg_saved">Saved</string>
    <string name="string_common_filesave_resultmsg_error">Failed to save document</string>
    <string name="string_common_contextmenu_save">Save</string>
    <string name="string_contextmenu_object_delete">Delete</string>
    <string name="string_contextmenu_object_copy">Copy</string>
    <string name="string_contextmenu_object_cut">Cut</string>
    <string name="string_contextmenu_object_paste">Paste</string>
    <string name="cm_setting_copy_progress">Copying...</string>
    <string name="cm_setting_move_progress">Moving...</string>
    <string name="string_filemanager_accountadd_email">Email</string>
    <string name="string_filemanager_accountadd_password">Password</string>
    <string name="string_filemanager_foldercreate">New folder</string>
    <string name="string_filemanager_foldercreate_name">Enter folder name</string>
    <string name="string_filemanager_context_move">Move</string>
    <string name="string_filemanager_context_copy">Copy</string>
    <string name="string_filemanager_context_paste">Paste</string>
    <string name="string_filemanager_context_delete">Delete</string>
    <string name="string_filemanager_context_rename">Rename</string>
    <string name="string_filemanager_context_extract">Extract</string>
    <string name="string_filemanager_context_sendfiles">Send</string>
    <string name="string_filemanager_context_properties">Properties</string>
    <string name="string_filemanager_context_download">Download</string>
    <string name="string_filemanager_contextmenu_filecreate">New file</string>
    <string name="string_filemanager_progress_localfile_sorting">Sorting...</string>
    <string name="string_filemanager_progress_localfile_refresh_web_filelist">Updating...</string>
    <string name="string_filemanager_file_errmsg_duplication">File or folder name already in use</string>
    <string name="string_filemanager_no_notes">No notes</string>
    <string name="string_filemanager_no_memos">No memos</string>
    <string name="string_errmsg_title_error">Error</string>
    <string name="string_errmsg_invalid_formula">Invalid formula</string>
    <string name="string_select_folder_message">Select a folder to copy or move the file to</string>
    <string name="string_select_folder_copy_message">Select a folder to copy</string>
    <string name="string_select_folder_move_message">Select a folder to move</string>
    <string name="filemanager_file_error_msg">File error</string>
    <string name="filemanager_file_delete_msg">This file/folder will be deleted</string>
    <string name="filemanager_file_exist_error_msg">File or folder name already in use</string>
    <string name="filemanager_file_recent_open_error">%1$s not found</string>
    <string name="filemanager_file_fine_name_error">Invalid file name</string>
    <string name="filemanager_file_name_max_error">File name too long</string>
    <string name="filemanager_file_copy_error_msg">Cancelled</string>
    <string name="filemanager_folder_copy_to_itself_error">Destination folder is the same as the source folder</string>
    <string name="filemanager_folder_copy_to_subfolder_error">Destination folder is a subfolder of the source folder</string>
    <string name="filemanager_file_folder_delete_success">Deleted</string>
    <string name="filemanager_filename_alert_msg">%1$s characters left</string>
    <string name="filemanager_filename_limit_msg">File or folder name should be no longer than %1$s characters</string>
    <string name="filemanager_Insufficient_momory">Not enough memory</string>
    <string name="string_filemanager_webstorage_wait">Network error occurred. Try again later</string>
    <string name="fm_property_type_folder">Folder</string>
    <string name="string_common_button_ok">OK</string>
    <string name="string_common_button_no">No</string>
    <string name="string_common_button_cancel">Cancel</string>
    <string name="string_common_button_select">Select</string>
    <string name="string_common_button_move">Move</string>
    <string name="string_common_listcontrol_footer">More</string>
    <string name="filemanager_file_rename_exttype_msg">"If you change a filename extension, the file may become unusable.
Are you sure you want to change it?"</string>
    <string name="string_common_msg_dialog_message_error">Error occurred</string>
    <string name="string_common_msg_dialog_title_confirm">Confirm</string>
    <string name="string_common_msg_dialog_message_confirm">Confirmation is required</string>
    <string name="string_filemanager_setting_recentfile_clear">Cleared</string>
    <string name="string_filemanager_web_login_fail">Failed to log in to server</string>
    <string name="string_filemanager_web_network_connection_fail">Network not available</string>
    <string name="string_voice_memo_title">Voice memo</string>
    <string name="string_context_delete">Delete</string>
    <string name="string_context_rename">Rename</string>
    <string name="string_context_lock">Lock</string>
    <string name="string_context_editcover">Edit cover</string>
    <string name="string_context_shortcut">Set as shortcut</string>
    <string name="string_context_Export">Export</string>
    <string name="string_context_share">Share via</string>
    <string name="string_context_print">Print</string>
    <string name="string_context_allshare">AllShare</string>
    <string name="string_context_bluetooth">Bluetooth</string>
    <string name="string_context_gmail">Gmail</string>
    <string name="string_context_messaging">Messaging</string>
    <string name="string_context_facebook">Facebook</string>
    <string name="string_context_picasa">Picasa</string>
    <string name="string_context_unlock">Unlock</string>
    <string name="string_menu_delete">Delete</string>
    <string name="string_filemanager_menu_sync">Sync</string>
    <string name="open_url">Open URL</string>
    <string name="settings_samsung_account_autosync_tag_title">Auto sync</string>
    <string name="settings_samsung_account_autosync_tag_summary">Auto sync with Samsung account</string>
    <string name="settings">Settings</string>
    <string name="settings_add_page_option_title">Add page</string>
    <string name="bubble_move_forward">Move forward</string>
    <string name="bubble_move_backward">Move backwards</string>
    <string name="bubble_move_forward_at_most">Move to the top</string>
    <string name="bubble_move_backward_at_most">Move to the bottom</string>
    <string name="string_tutorial_learningapplication_explanation">Create your own note to cherish through various productivity tools</string>
    <string name="string_tutorial_productivitytools">Productivity tools</string>
    <string name="string_tutorial_productivitytools_explanation">Tap productivity tools icon to use handwriting recognition and insert the result as text or image</string>
    <string name="string_tutorial_formulamatch">Formula match</string>
    <string name="string_tutorial_formulamatch_explanation">Select the formula match icon from the productivity tools pop-up, and enter a handwritten formula. Then the formula you have entered will be recognised and the results displayed at the top. You can search for solutions to the formula using the Wolfram Alpha search engine or insert the typed formula into the note</string>
    <string name="string_tutorial_shapematch">Shape match</string>
    <string name="string_tutorial_shapematch_explanation">Select the shape match icon from the productivity tools pop-up and draw a shape or line. These shapes will automatically be corrected and completed. You can delete lines that stick out by rubbing over the area with your finger or a pen</string>
    <string name="string_tutorial_textmatch">Handwriting-to-text</string>
    <string name="string_tutorial_textmatch_explanation">Tap handwriting-to-text icon in the productivity tools pop-up, then the words you write will be recognised and converted into text. You can correct the result using the 4 navigation keys and the backspace key</string>
    <string name="string_tutorial_panning">Zoom in/out and pan</string>
    <string name="string_tutorial_panning_explanation_merged">Tapping the screen with two fingers and then swiping them in opposite directions is called pinch zoom. When you have zoomed in using pinch zoom in Create/Edit mode, you can pan by swiping the screen with two fingers</string>
    <string name="string_tutorial_select_object">Select item</string>
    <string name="string_tutorial_tap_and_hold_object_to_select">Tap and hold item to select</string>
    <string name="string_tutorial_dontshow">Do not show again</string>
    <string name="string_input_language">Input language</string>
    <string name="string_input_language_summary">Select the language to be used for handwriting-to-text recognition</string>
    <string name="string_hovering_tootip_previous">Previous</string>
    <string name="string_hovering_tootip_play">Play</string>
    <string name="string_hovering_tootip_next">Next</string>
    <string name="string_image_filter_effect">Sketch effect</string>
    <string name="string_result">Result :</string>
    <string name="string_gettype">Get Type</string>
    <string name="string_settype">Set Type</string>
    <string name="string_typeSearch">Type Search</string>
    <string name="string_addint">Add Int</string>
    <string name="string_addstring">Add String</string>
    <string name="string_addrect">Add Rect</string>
    <string name="string_remove">Remove</string>
    <string name="string_load">Load</string>
    <string name="string_Change">Change</string>
    <string name="string_namesearch">Name Search</string>
    <string name="string_clear">Clear</string>
    <string name="string_getnextpage">Get Texts on page</string>
    <string name="string_pageindex">page index</string>
    <string name="string_objectid">object_id</string>
    <string name="string_indexandobject">Index and Object ID</string>
    <string name="string_getvalue">Get value without select</string>
    <string name="strng_getviedo">Get Videos</string>
    <string name="string_draw_guideline">Drawing guide lines</string>
    <string name="string_show_draw_guideline">Show guide lines when the selected shape can be moved or resized</string>
    <string name="string_create_note_title">Note creation options</string>
</resources>