<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/actionbar_ico_send" android:id="@id/menu_filemanager_actionmode_send" android:title="@string/string_filemanager_context_sendfiles" />
    <item android:icon="@drawable/ico_menu_move" android:id="@id/menu_filemanager_actionmode_move" android:title="@string/string_filemanager_context_move" />
    <item android:icon="@drawable/ico_menu_copy" android:id="@id/menu_filemanager_actionmode_copy" android:title="@string/string_filemanager_context_copy" />
    <item android:icon="@drawable/ico_menu_delete" android:id="@id/menu_filemanager_actionmode_delete" android:title="@string/string_filemanager_context_delete" />
    <item android:icon="@drawable/ico_menu_properties" android:id="@id/menu_filemanager_actionmode_properties" android:title="@string/string_filemanager_context_properties" />
</menu>
