<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="30.0px" android:paddingRight="30.0px" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="36.0px" android:textColor="#ffffffff" android:id="@id/productivitytools_explanation_popup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/string_tutorial_learningapplication_explanation" />
            <TextView android:textSize="40.0px" android:textStyle="bold" android:textColor="#ffe1e1e1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0px" android:text="@string/string_tutorial_productivitytools" />
            <TextView android:textSize="36.0px" android:textColor="#ffc8c8c8" android:id="@id/productivitytools_explanation_popup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/string_tutorial_productivitytools_explanation" />
            <ImageView android:id="@id/popup_productivity_tools" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:src="@drawable/popup_productivity_tools" />
            <TextView android:textSize="40.0px" android:textStyle="bold" android:textColor="#ffe1e1e1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0px" android:text="@string/string_tutorial_shapematch" android:drawableLeft="@drawable/snote_tutorial_ic_shape" />
            <TextView android:textSize="36.0px" android:textColor="#ffc8c8c8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/string_tutorial_shapematch_explanation" />
            <TextView android:textSize="40.0px" android:textStyle="bold" android:textColor="#ffe1e1e1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0px" android:text="@string/string_tutorial_formulamatch" android:drawableLeft="@drawable/snote_tutorial_ic_formula" />
            <TextView android:textSize="36.0px" android:textColor="#ffc8c8c8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/string_tutorial_formulamatch_explanation" />
            <ImageView android:id="@id/popup_formula_match" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:src="@drawable/popup_formula_match" />
            <TextView android:textSize="40.0px" android:textStyle="bold" android:textColor="#ffe1e1e1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0px" android:text="@string/string_tutorial_textmatch" android:drawableLeft="@drawable/snote_tutorial_ic_text" />
            <TextView android:textSize="36.0px" android:textColor="#ffc8c8c8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/string_tutorial_textmatch_explanation" />
            <ImageView android:id="@id/popup_text_match" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:src="@drawable/popup_text_match" />
            <TextView android:textSize="40.0px" android:textStyle="bold" android:textColor="#ffe1e1e1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0px" android:text="@string/string_tutorial_panning" />
            <TextView android:textSize="36.0px" android:textColor="#ffc8c8c8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/string_tutorial_panning_explanation_merged" />
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0px" android:src="@drawable/popup_panning" />
            <TextView android:textSize="40.0px" android:textStyle="bold" android:textColor="#ffe1e1e1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0px" android:text="@string/string_tutorial_select_object" />
            <TextView android:textSize="36.0px" android:textColor="#ffc8c8c8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0px" android:text="@string/string_tutorial_tap_and_hold_object_to_select" />
        </LinearLayout>
    </ScrollView>
    <com.infraware.widget.CheckableLinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/tutorial_check_layout" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="100.0px" android:layout_marginLeft="20.0px" android:layout_marginTop="28.0px" android:layout_marginBottom="28.0px">
        <CheckBox android:id="@id/check" android:clickable="false" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="36.0px" android:textColor="#ffffffff" android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/string_tutorial_dontshow" />
    </com.infraware.widget.CheckableLinearLayout>
</LinearLayout>
